k8s/train-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contacts-in-item-train-deployment
  labels:
    app: contacts-in-item-train
spec:
  replicas: 1
  selector:
    matchLabels:
      app: contacts-in-item-train
  template:
    metadata:
      labels:
        app: contacts-in-item-train
    spec:
      containers:
        - name: contacts-in-item-train
          image: varsey/contacts-in-item-serving:0.3.0
          ports:
            - containerPort: 8000
