k8s/pred-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contacts-in-item-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: sdukshis.otus-bigdata-k8s.filonovpv.name
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: app-service
              port:
                number: 8000
